# ncs-zigbee

./: .buildinfo  .gitignore  CODEOWNERS  README.md  about.html  adding_clusters.html  architectures.html  commissioning.html  configuring.html  genindex.html  index.html  memory.html  objects.inv  quick-start.html  release-notes.html  search.html  searchindex.js  setup.html  tools.html  west.yml
_sources/: release-notes.rst.txt
configuring/: configuring_libraries.html  configuring_zboss_traces.html  index.html  (+1 more)
samples/light_bulb/: CMakeLists.txt  CMakeLists_matter.txt  Kconfig  Kconfig.sysbuild  Kconfig_sysbuild_matter_fota  README.html  README.rst  matter_fota_release.conf  pm_static.yml  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp_matter_fota.yml  prj.conf  prj_matter_fota.conf  prj_matter_fota_release.conf  sample.yaml  sysbuild_matter_fota.conf
samples/light_bulb/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
samples/light_bulb/include/: app_task_matter.h  app_task_zigbee.h
samples/light_bulb/src/: app_task_matter.cpp  app_task_zigbee.cpp  chip_project_config.h  main.c  main.cpp  main_matter.c  matter_init.cpp  matter_init.h
samples/light_bulb/sysbuild/: mcuboot_matter_fota.conf
samples/light_bulb/sysbuild/mcuboot/: app.overlay  prj.conf
samples/light_bulb/sysbuild/mcuboot/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
samples/light_switch/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.html  README.rst  matter_fota_release.conf  overlay-multiprotocol_ble.conf  pm_static_nrf54lm20dk_nrf54lm20a_cpuapp_matter_fota.yml  prj.conf  prj_fota.conf  prj_matter_fota.conf  sample.yaml  sysbuild_fota.conf
samples/light_switch/boards/: nrf52840dk_nrf52840_fota.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_fota.conf  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l10_cpuapp_fota.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_fota.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp_fota.overlay
samples/light_switch/include/: app_task_zigbee.h  chip_project_config.h  protocol_state.h
samples/light_switch/snippets/low_power/: low_power.conf  snippet.yml
samples/light_switch/snippets/low_power/boards/: nrf52840dk_nrf52840.conf
samples/light_switch/src/: app_task_zigbee.c  main.c  main.cpp  nus_cmd.c  protocol_state.c
samples/light_switch/sysbuild/ipc_radio/: prj.conf
samples/light_switch/sysbuild/ipc_radio/boards/: nrf5340dk_nrf5340_cpunet_fota.conf
samples/light_switch/sysbuild/mcuboot/: prj.conf
samples/light_switch/sysbuild/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp_fota.conf  nrf54l15dk_nrf54l10_cpuapp.conf  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54lm20dk_nrf54lm20a_cpuapp.conf
(+2244 files in other folders)
